--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,24 +1,26 @@
-echo __pycache__/ > .gitignore
-echo *.py[cod] >> .gitignore
-echo *.pyo >> .gitignore
-echo *.pyd >> .gitignore
-echo *.pyc >> .gitignore
-echo venv/ >> .gitignore
-echo ENV/ >> .gitignore
-echo env/ >> .gitignore
-echo .venv/ >> .gitignore
-echo instance/ >> .gitignore
-echo *.sqlite3 >> .gitignore
-echo *.db >> .gitignore
-echo *.log >> .gitignore
-echo .pytest_cache/ >> .gitignore
-echo .coverage >> .gitignore
-echo .tox/ >> .gitignore
-echo .vscode/ >> .gitignore
-echo .idea/ >> .gitignore
-echo *.swp >> .gitignore
-echo *.swo >> .gitignore
-echo .DS_Store >> .gitignore
-echo Thumbs.db >> .gitignore
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+venv/
+ENV/
+env/
+.venv/
+instance/
+*.sqlite3
+*.db
+*.log
+.pytest_cache/
+.coverage
+.tox/
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
 
-venv
+# Ignore specific model and data files
+backend/services/best.pt
+backend/services/car_plate_data.txt
